--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1730652_eutz36nin36.css">
-    <title>sghen-wap</title>
+    <title>Sghen三行</title>
   </head>
   <body>
     <noscript>
