--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="description" content="诗词系统，集创建、评论、查询一体，主题为刷三行">
+    <meta name="keywords" content="诗词,书三行,Sghen三行,Sghen">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1730652_96vm5rfm5q.css">
     <title>Sghen三行</title>
